--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -51,6 +51,17 @@
   doi = {10.1002/2013JB010732}
 }
 
+@article{Erickson2023,
+  author = {Erickson, B. A. and Jiang, J. and Lambert, V. and Abdelmeguid, M. and Almquist, M. and Ampuero, J. P. and Thakur, P. and Yang, Y. and others},
+  year = {2022},
+  title = {Incorporating full elastodynamic effects and dipping fault geometries in community code verification exercises for simulations of earthquake sequences and aseismic slip (SEAS)},
+  journal = {Seismological Research Letters},
+  volume = {93},
+  number = {5},
+  pages = {2819--2831},
+  doi = {10.1785/0220220057}
+}
+
 @article{Thakur2020,
   author = {Thakur, P. and Huang, Y. and Kaneko, Y.},
   year = {2020},
@@ -81,12 +92,14 @@
   doi = {10.1016/j.epsl.2024.118480}
 }
 
-@inproceedings{Zhai2023,
+@article{Zhai2024,
   author = {Zhai, P. and Huang, Y.},
-  year = {2023},
-  title = {The effects of characteristic slip distance on earthquake nucleation styles in fully dynamic seismic cycles},
-  booktitle = {2023 AGU Annual Meeting},
-  address = {San Francisco, CA}
+  year = {2024},
+  title = {The effects of characteristic weakening distance on earthquake nucleation styles in fully dynamic seismic cycle simulations},
+  journal = {Journal of Geophysical Research: Solid Earth},
+  volume = {129},
+  number = {12},
+  doi = {10.1029/2024JB029719}
 }
 
 @article{Abdelmeguid2019,
